# rabbitmq-demo

./: .gitattributes  .gitignore  .typos.toml  Cargo.toml  README.md  cog.toml  compose.yaml  flake.nix  justfile
rabbitmq/: rabbitmq.conf
src/: lib.rs  tests.rs
